[gd_scene load_steps=14 format=3 uid="uid://8ihah4u7k5dl"]

[ext_resource type="Script" path="res://scripts/juice_area.gd" id="1_eqsr5"]
[ext_resource type="FontFile" uid="uid://bwy2e8xmmkrd4" path="res://assets/fonts/gemunu-libre-v8-latin-700.ttf" id="2_4miy5"]
[ext_resource type="Texture2D" uid="uid://cng2dpmhri2ba" path="res://assets/sprites/ui sprites/All.png" id="3_u6qsi"]
[ext_resource type="AudioStream" uid="uid://clqqvg81huvel" path="res://assets/audio/machine.MP3" id="4_pbg3e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rq781"]
size = Vector2(49.5161, 20)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vp8v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1o3na"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j4ev0"]
atlas = ExtResource("3_u6qsi")
region = Rect2(448, 0, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_sj0fa"]
atlas = ExtResource("3_u6qsi")
region = Rect2(464, 0, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu7dh"]
atlas = ExtResource("3_u6qsi")
region = Rect2(480, 0, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxj3s"]
atlas = ExtResource("3_u6qsi")
region = Rect2(496, 0, 16, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_ht3ox"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4ev0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sj0fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu7dh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxj3s")
}],
"loop": true,
"name": &"play",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qfu3f"]
size = Vector2(9.61295, 6.27586)

[node name="JuiceArea" type="Area2D"]
script = ExtResource("1_eqsr5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(23.5, 0)
shape = SubResource("RectangleShape2D_rq781")
debug_color = Color(2.98411e-06, 0.644249, 0.284628, 0.42)

[node name="fill_bar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
z_index = 2
offset_right = 40.0
offset_bottom = 37.0
scale = Vector2(0.7, 0.529)
theme_override_fonts/font = ExtResource("2_4miy5")
theme_override_font_sizes/font_size = 30
theme_override_styles/background = SubResource("StyleBoxEmpty_7vp8v")
theme_override_styles/fill = SubResource("StyleBoxEmpty_1o3na")
exp_edit = true
rounded = true

[node name="levelLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 22.3333

[node name="animatesprite2D" type="AnimatedSprite2D" parent="."]
z_index = 4
position = Vector2(3.8147e-06, 0)
scale = Vector2(0.553445, 0.588543)
sprite_frames = SubResource("SpriteFrames_ht3ox")
animation = &"play"

[node name="update_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="update_area"]
shape = SubResource("RectangleShape2D_qfu3f")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_pbg3e")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="update_area" to="." method="_on_update_area_body_entered"]
